fix: register bug and and update swager info
